# llm-experiments

./: pyproject.toml  test.py
balanced-moe/: README.md
balanced-moe/encoders/network/: experts_layer.py
balanced-moe/modules/: experts_layer.py
explainable_attn/: README.md
sparse_attention_heads/: README.md  ds_config.json  interactivetest.py  kaggle_hostfile.txt  main.py  prelimtest.cfg  related.md  saheads.py  saheads_train_ds.py  train.cfg
sparse_attention_heads/data/: __init__.py  data.py  vocab.py  vocab_config.py
sparse_attention_heads/logs/: pythonstuff.txt
sparse_attention_heads/modules/: __init__.py  pos_enc.py  sparse_encoder.py  sparse_mha.py  sparse_transformer.py
sparse_attention_heads/scripts/: train_kaggle.sh  train_local.sh
sparse_attention_heads/training/: onetimetesting.py  prediction_head.py  quantization.py  train.py  train_clm.py  train_deepspeed.py
sparse_attention_heads/utils/: write_config.py
testing_scripts/: sparse_test.py  test.py
vocab/: vocab.txt
