[tool.poetry]
name = "llm-experiments"
version = "0.1.0"
description = ""
authors = ["VisH317 <vt201916384@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "1.9.0"
torch-geometric = "*"
fast-pytorch-kmeans = "*"
sentence-transformers = "*"
datasets = "*"
apache_beam = "*"
mwparserfromhell = "*"
transformers = "*"
deepspeed = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
